argocd/glance/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glance
---
apiVersion: v1
kind: Service
metadata:
  name: glance-service 
  namespace: glance    
spec:
  selector:
    app: glance   
  ports:
    - protocol: TCP
      port: 80       
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance-ingressroute
  namespace: glance
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.lab.member87.xyz`)
      kind: Rule
      services:
        - name: glance-service
          port: 8080
  tls:
    secretName: glance-certificate-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance-deployment
  namespace: glance
spec:
  replicas: 3
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      
      volumes:
      - name: config-volume
        configMap:
          name: glance-config 
      containers:
      - name: glance
        image: glanceapp/glance
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume 
          mountPath: /app/config
          readOnly: true
